# Goodyear-Quantum-Pilot

./: README.md  issues-report.md
data/: fortune500_quasim_matrix.csv
docs/: market_valuation.md
docs/ownai/: benchmarks.md
goodyear_quantum_pilot/: README.md  __init__.py  demo_tire_simulation.py  pyproject.toml  requirements.txt
goodyear_quantum_pilot/algorithms/: __init__.py  monte_carlo.py  qaoa.py  stress.py  tunneling.py  vqe.py
goodyear_quantum_pilot/benchmarks/: __init__.py  accuracy.py  analytics.py  comparison.py  performance.py
goodyear_quantum_pilot/core/: __init__.py
goodyear_quantum_pilot/core/backends/: __init__.py
goodyear_quantum_pilot/core/circuits/: __init__.py
goodyear_quantum_pilot/core/state/: __init__.py
goodyear_quantum_pilot/core/tensor_networks/: __init__.py
goodyear_quantum_pilot/docs/: API_REFERENCE.md  PATENTS_81_100.md  TECHNICAL_WHITEPAPER.md
goodyear_quantum_pilot/materials/: __init__.py  base.py  database.py  elastomers.py  nanoarchitectures.py  quantum_engineered.py  rubbers.py  self_healing.py
goodyear_quantum_pilot/simulation/: __init__.py  catastrophic.py  core.py  environment.py  factory.py  on_vehicle.py  shipping.py
goodyear_quantum_pilot/tests/: __init__.py  test_integration.py
montecarlo_campaigns/: coverage_matrix.csv
tests/qdl/: test_lexer_parser.py
tests/qstack/: test_q_identity_attestation.py
