[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goodyear-quantum-pilot"
version = "1.0.0"
description = "Quantum-enhanced tire materials simulation platform"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "QuASIM Quantum Engineering Division", email = "engineering@quasim.io"}
]
maintainers = [
    {name = "Goodyear Quantum Computing Division", email = "quantum@goodyear.com"}
]
keywords = [
    "quantum computing",
    "materials science",
    "tire simulation",
    "VQE",
    "QAOA",
    "quantum monte carlo",
    "polymer chemistry"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "pyyaml>=6.0",
    "typing-extensions>=4.7.0",
]

[project.optional-dependencies]
quantum = [
    "qiskit>=0.44.0",
    "qiskit-aer>=0.12.0",
    "qiskit-nature>=0.6.0",
    "pennylane>=0.31.0",
]
gpu = [
    "jax[cuda12_pip]>=0.4.13",
    "torch>=2.0.0",
]
chemistry = [
    "pyscf>=2.3.0",
]
visualization = [
    "plotly>=5.15.0",
    "seaborn>=0.12.0",
    "rich>=13.4.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.82.0",
    "ruff>=0.0.280",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]
docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]
full = [
    "goodyear-quantum-pilot[quantum,gpu,chemistry,visualization,dev,docs]",
]

[project.urls]
Homepage = "https://quasim.io/goodyear"
Documentation = "https://quasim.io/docs/goodyear"
Repository = "https://github.com/quasim/goodyear-quantum-pilot"
Issues = "https://github.com/quasim/goodyear-quantum-pilot/issues"
Changelog = "https://github.com/quasim/goodyear-quantum-pilot/blob/main/CHANGELOG.md"

[project.scripts]
gqp = "goodyear_quantum_pilot.cli:main"
gqp-simulate = "goodyear_quantum_pilot.cli:simulate"
gqp-benchmark = "goodyear_quantum_pilot.cli:benchmark"

[project.entry-points."goodyear_quantum_pilot.backends"]
qiskit = "goodyear_quantum_pilot.algorithms.backends.qiskit_backend:QiskitBackend"
braket = "goodyear_quantum_pilot.algorithms.backends.braket_backend:BraketBackend"
ionq = "goodyear_quantum_pilot.algorithms.backends.ionq_backend:IonQBackend"
simulator = "goodyear_quantum_pilot.algorithms.backends.simulator:SimulatorBackend"

[tool.setuptools.packages.find]
where = ["."]
include = ["goodyear_quantum_pilot*"]

[tool.setuptools.package-data]
goodyear_quantum_pilot = [
    "py.typed",
    "materials/data/*.json",
    "materials/data/*.yaml",
    "configs/*.yaml",
]

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in default argument
    "C901",  # too complex
]

[tool.ruff.isort]
known-first-party = ["goodyear_quantum_pilot"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__
"tests/*" = ["ARG001"]     # unused arguments in tests

# MyPy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "qiskit.*",
    "pennylane.*",
    "jax.*",
    "scipy.*",
    "pandas.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "quantum: marks tests requiring quantum backend",
    "gpu: marks tests requiring GPU",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["goodyear_quantum_pilot"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 80
show_missing = true
